--- a/order-management-frontend/src/app/features/products/product-list/product-list.component.css
+++ b/order-management-frontend/src/app/features/products/product-list/product-list.component.css
@@ -1,9 +1,11 @@
 .product-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  padding-top: 20px;
   }
+
   
   .product-item {
     border: 1px solid #ddd;
