--- a/order-management-frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/order-management-frontend/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,3 @@
-<!-- navbar.component.html -->
 <nav class="navbar">
   <h1>Order Management</h1>
   <ul>
@@ -6,4 +5,5 @@
     <li><a (click)="openLoginModal()">Login</a></li>
   </ul>
 </nav>
+<!-- Reference the modal component here -->
 <app-login-modal #loginModal></app-login-modal>
