--- a/order-management-frontend/src/app/features/products/product-list/product-list.component.html
+++ b/order-management-frontend/src/app/features/products/product-list/product-list.component.html
@@ -2,7 +2,10 @@
   <h2>Our Products</h2>
   <div *ngIf="products.length; else noProducts">
     <div *ngFor="let product of products" class="product-item">
-      <h3>{{ product.name }}</h3>
+      <!-- Link to Product Details Page -->
+      <a [routerLink]="['/products', product.id]" class="product-link">
+        <h3>{{ product.name }}</h3>
+      </a>
       <p>{{ product.description }}</p>
       <p>Price: {{ product.price | currency }}</p>
     </div>
