--- a/order-management-frontend/src/app/shared/components/login-modal/login-modal.component.html
+++ b/order-management-frontend/src/app/shared/components/login-modal/login-modal.component.html
@@ -4,27 +4,27 @@
     <h2 *ngIf="!showLogin">Create Account</h2>
 
     <!-- Login Form -->
-    <form *ngIf="showLogin" (ngSubmit)="close()">
+    <form *ngIf="showLogin" (ngSubmit)="handleLogin()">
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
-      
+      <input type="text" id="username" name="username" [(ngModel)]="username" required>
+
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-  
+      <input type="password" id="password" name="password" [(ngModel)]="password" required>
+
       <button type="submit">Login</button>
       <button type="button" (click)="toggleView()">Create Account</button>
     </form>
 
     <!-- Create Account Form -->
-    <form *ngIf="!showLogin" (ngSubmit)="close()">
+    <form *ngIf="!showLogin" (ngSubmit)="handleRegister()">
       <label for="new-username">Username:</label>
-      <input type="text" id="new-username" name="username" required>
-      
+      <input type="text" id="new-username" name="username" [(ngModel)]="username" required>
+
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" [(ngModel)]="email" required>
 
       <label for="new-password">Password:</label>
-      <input type="password" id="new-password" name="password" required>
+      <input type="password" id="new-password" name="password" [(ngModel)]="password" required>
 
       <button type="submit">Create Account</button>
       <button type="button" (click)="toggleView()">Back to Login</button>
