--- a/order-management-frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/order-management-frontend/src/app/shared/components/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   <h1>Order Management</h1>
   <ul>
     <li><a routerLink="/">Home</a></li>
-    <li><a (click)="openLoginModal()">Login</a></li>
+    <li *ngIf="!isLoggedIn"><a (click)="openLoginModal()">Login</a></li>
+    <li *ngIf="isLoggedIn">{{ userName }} | <a (click)="logout()">Logout</a></li>
   </ul>
 </nav>
-<!-- Reference the modal component here -->
 <app-login-modal #loginModal></app-login-modal>
