--- a/order-management-frontend/src/app/app.component.html
+++ b/order-management-frontend/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="app-overlay"></div> <!-- Gray overlay over the background image -->
+<div class="app-content">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</div>
