--- a/order-management-frontend/src/app/features/products/product-detail/product-detail.component.html
+++ b/order-management-frontend/src/app/features/products/product-detail/product-detail.component.html
@@ -1,10 +1,8 @@
 <div *ngIf="product" class="product-details">
-    <h2>{{ product.name }}</h2>
-    <p>{{ product.description }}</p>
-    <p>Price: {{ product.price | currency }}</p>
-    <!-- Add other details as needed -->
-  </div>
-  <div *ngIf="!product">
-    <p>Loading product details...</p>
-  </div>
-  
+  <h2>{{ product.name }}</h2>
+  <p>{{ product.description }}</p>
+  <p class="product-price">Price: {{ product.price | currency }}</p>
+</div>
+<div *ngIf="!product" class="product-details-loading">
+  <p>Loading product details...</p>
+</div>
